<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.maiconribeiro.myappportfolio.MainActivity"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
    android:id="@+id/linearLayout"
    android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:id="@+id/textView"
            android:layout_above="@+id/linearLayout"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/linearLayout"
            android:layout_alignRight="@+id/linearLayout"
            android:layout_alignEnd="@+id/linearLayout"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/widget_edittext_dark"
            android:textSize="@dimen/abc_text_size_medium_material" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popular_movies"
            android:id="@+id/button1"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:backgroundTint="#2196f3" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stock_hawk"
            android:id="@+id/button2"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:backgroundTint="#2196f3" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/built_it_bigger"
            android:id="@+id/button3"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#2196f3"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button4"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#2196f3"
            android:textColor="@android:color/white"
            android:text="@string/make_our_app_material" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/go_ubiquitous"
            android:id="@+id/button5"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="#2196f3"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/capstone"
            android:id="@+id/button6"
            android:backgroundTint="#2196f3"
            android:textColor="@android:color/white" />
    </LinearLayout>


